jParser.py
# Generated from /Users/augusto/PycharmProjects/AnalisadorSemantico/j.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class jParser ( Parser ):

    grammarFileName = "j.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'import'", "'.'", 
                     "'public'", "'protected'", "'private'", "'static'", 
                     "'abstract'", "'class'", "'extends'", "'{'", "'}'", 
                     "'void'", "':'", "'if'", "'else'", "'while'", "'return'", 
                     "'('", "','", "')'", "'='", "'boolean'", "'char'", 
                     "'int'", "'['", "']'", "'+='", "'&&'", "'=='", "'>'", 
                     "'<='", "'instanceof'", "'+'", "'-'", "'*'", "'++'", 
                     "'!'", "'--'", "'this'", "'super'", "'new'", "'true'", 
                     "'false'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "CHAR", "STRING", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_qualifiedIdentifier = 1
    RULE_typeDeclaration = 2
    RULE_modifiers = 3
    RULE_classDeclaration = 4
    RULE_classBody = 5
    RULE_memberDecl = 6
    RULE_block = 7
    RULE_blockStatement = 8
    RULE_statement = 9
    RULE_formalParameters = 10
    RULE_formalParameter = 11
    RULE_parExpression = 12
    RULE_localVariableDeclarationStatement = 13
    RULE_variableDeclarators = 14
    RULE_variableDeclarator = 15
    RULE_variableInitializer = 16
    RULE_arrayInitializer = 17
    RULE_arguments = 18
    RULE_typ = 19
    RULE_basicType = 20
    RULE_referenceType = 21
    RULE_statementExpression = 22
    RULE_expression = 23
    RULE_assignmentExpression = 24
    RULE_conditionalAndExpression = 25
    RULE_equalityExpression = 26
    RULE_relationalExpression = 27
    RULE_additiveExpression = 28
    RULE_multiplicativeExpression = 29
    RULE_unaryExpression = 30
    RULE_simpleUnaryExpression = 31
    RULE_postfixExpression = 32
    RULE_selector = 33
    RULE_primary = 34
    RULE_creator = 35
    RULE_newArrayDeclarator = 36
    RULE_literal = 37

    ruleNames =  [ "compilationUnit", "qualifiedIdentifier", "typeDeclaration", 
                   "modifiers", "classDeclaration", "classBody", "memberDecl", 
                   "block", "blockStatement", "statement", "formalParameters", 
                   "formalParameter", "parExpression", "localVariableDeclarationStatement", 
                   "variableDeclarators", "variableDeclarator", "variableInitializer", 
                   "arrayInitializer", "arguments", "typ", "basicType", 
                   "referenceType", "statementExpression", "expression", 
                   "assignmentExpression", "conditionalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "simpleUnaryExpression", "postfixExpression", 
                   "selector", "primary", "creator", "newArrayDeclarator", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    ID=47
    INT=48
    CHAR=49
    STRING=50
    WS=51
    COMMENT=52
    LINE_COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jParser.EOF, 0)

        def qualifiedIdentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.QualifiedIdentifierContext)
            else:
                return self.getTypedRuleContext(jParser.QualifiedIdentifierContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(jParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return jParser.RULE_compilationUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = jParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jParser.T__0:
                self.state = 76
                self.match(jParser.T__0)
                self.state = 77
                self.qualifiedIdentifier()
                self.state = 78
                self.match(jParser.T__1)


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jParser.T__2:
                self.state = 82
                self.match(jParser.T__2)
                self.state = 83
                self.qualifiedIdentifier()
                self.state = 84
                self.match(jParser.T__1)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__4) | (1 << jParser.T__5) | (1 << jParser.T__6) | (1 << jParser.T__7) | (1 << jParser.T__8) | (1 << jParser.T__9))) != 0):
                self.state = 91
                self.typeDeclaration()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(jParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QualifiedIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(jParser.ID)
            else:
                return self.getToken(jParser.ID, i)

        def getRuleIndex(self):
            return jParser.RULE_qualifiedIdentifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedIdentifier" ):
                return visitor.visitQualifiedIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedIdentifier(self):

        localctx = jParser.QualifiedIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_qualifiedIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(jParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 100
                    self.match(jParser.T__3)
                    self.state = 101
                    self.match(jParser.ID) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(jParser.ModifiersContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(jParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return jParser.RULE_typeDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = jParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.modifiers()
            self.state = 108
            self.classDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModifiersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jParser.RULE_modifiers

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifiers" ):
                return visitor.visitModifiers(self)
            else:
                return visitor.visitChildren(self)




    def modifiers(self):

        localctx = jParser.ModifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modifiers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__4) | (1 << jParser.T__5) | (1 << jParser.T__6) | (1 << jParser.T__7) | (1 << jParser.T__8))) != 0):
                self.state = 110
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__4) | (1 << jParser.T__5) | (1 << jParser.T__6) | (1 << jParser.T__7) | (1 << jParser.T__8))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(jParser.ClassBodyContext,0)


        def qualifiedIdentifier(self):
            return self.getTypedRuleContext(jParser.QualifiedIdentifierContext,0)


        def getRuleIndex(self):
            return jParser.RULE_classDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = jParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(jParser.T__9)
            self.state = 117
            self.match(jParser.ID)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jParser.T__10:
                self.state = 118
                self.match(jParser.T__10)
                self.state = 119
                self.qualifiedIdentifier()


            self.state = 122
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.ModifiersContext)
            else:
                return self.getTypedRuleContext(jParser.ModifiersContext,i)


        def memberDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.MemberDeclContext)
            else:
                return self.getTypedRuleContext(jParser.MemberDeclContext,i)


        def getRuleIndex(self):
            return jParser.RULE_classBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = jParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(jParser.T__11)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__4) | (1 << jParser.T__5) | (1 << jParser.T__6) | (1 << jParser.T__7) | (1 << jParser.T__8) | (1 << jParser.T__13) | (1 << jParser.T__23) | (1 << jParser.T__24) | (1 << jParser.T__25) | (1 << jParser.ID))) != 0):
                self.state = 125
                self.modifiers()
                self.state = 126
                self.memberDecl()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(jParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MemberDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jParser.ID, 0)

        def formalParameters(self):
            return self.getTypedRuleContext(jParser.FormalParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(jParser.BlockContext,0)


        def typ(self):
            return self.getTypedRuleContext(jParser.TypContext,0)


        def variableDeclarators(self):
            return self.getTypedRuleContext(jParser.VariableDeclaratorsContext,0)


        def getRuleIndex(self):
            return jParser.RULE_memberDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDecl" ):
                return visitor.visitMemberDecl(self)
            else:
                return visitor.visitChildren(self)




    def memberDecl(self):

        localctx = jParser.MemberDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memberDecl)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(jParser.ID)
                self.state = 136
                self.formalParameters()
                self.state = 137
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jParser.T__13]:
                    self.state = 139
                    self.match(jParser.T__13)
                    pass
                elif token in [jParser.T__23, jParser.T__24, jParser.T__25, jParser.ID]:
                    self.state = 140
                    self.typ()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 143
                self.match(jParser.ID)
                self.state = 144
                self.formalParameters()
                self.state = 147
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jParser.T__11]:
                    self.state = 145
                    self.block()
                    pass
                elif token in [jParser.T__1]:
                    self.state = 146
                    self.match(jParser.T__1)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.typ()
                self.state = 150
                self.variableDeclarators()
                self.state = 151
                self.match(jParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.BlockStatementContext)
            else:
                return self.getTypedRuleContext(jParser.BlockStatementContext,i)


        def getRuleIndex(self):
            return jParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = jParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(jParser.T__11)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__1) | (1 << jParser.T__11) | (1 << jParser.T__15) | (1 << jParser.T__17) | (1 << jParser.T__18) | (1 << jParser.T__19) | (1 << jParser.T__23) | (1 << jParser.T__24) | (1 << jParser.T__25) | (1 << jParser.T__35) | (1 << jParser.T__37) | (1 << jParser.T__38) | (1 << jParser.T__40) | (1 << jParser.T__41) | (1 << jParser.T__42) | (1 << jParser.T__43) | (1 << jParser.T__44) | (1 << jParser.T__45) | (1 << jParser.ID) | (1 << jParser.INT) | (1 << jParser.CHAR) | (1 << jParser.STRING))) != 0):
                self.state = 156
                self.blockStatement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(jParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localVariableDeclarationStatement(self):
            return self.getTypedRuleContext(jParser.LocalVariableDeclarationStatementContext,0)


        def statement(self):
            return self.getTypedRuleContext(jParser.StatementContext,0)


        def getRuleIndex(self):
            return jParser.RULE_blockStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)




    def blockStatement(self):

        localctx = jParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStatement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.localVariableDeclarationStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(jParser.BlockContext,0)


        def ID(self):
            return self.getToken(jParser.ID, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.StatementContext)
            else:
                return self.getTypedRuleContext(jParser.StatementContext,i)


        def parExpression(self):
            return self.getTypedRuleContext(jParser.ParExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(jParser.ExpressionContext,0)


        def statementExpression(self):
            return self.getTypedRuleContext(jParser.StatementExpressionContext,0)


        def getRuleIndex(self):
            return jParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = jParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(jParser.ID)
                self.state = 170
                self.match(jParser.T__14)
                self.state = 171
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(jParser.T__15)
                self.state = 173
                self.parExpression()
                self.state = 174
                self.statement()
                self.state = 177
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 175
                    self.match(jParser.T__16)
                    self.state = 176
                    self.statement()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.match(jParser.T__17)
                self.state = 180
                self.parExpression()
                self.state = 181
                self.statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.match(jParser.T__18)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__19) | (1 << jParser.T__35) | (1 << jParser.T__37) | (1 << jParser.T__38) | (1 << jParser.T__40) | (1 << jParser.T__41) | (1 << jParser.T__42) | (1 << jParser.T__43) | (1 << jParser.T__44) | (1 << jParser.T__45) | (1 << jParser.ID) | (1 << jParser.INT) | (1 << jParser.CHAR) | (1 << jParser.STRING))) != 0):
                    self.state = 184
                    self.expression()


                self.state = 187
                self.match(jParser.T__1)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 188
                self.match(jParser.T__1)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 189
                self.statementExpression()
                self.state = 190
                self.match(jParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formalParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jParser.FormalParameterContext)
            else:
                return self.getTypedRuleContext(jParser.FormalParameterContext,i)


        def getRuleIndex(self):
            return jParser.RULE_formalParameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameters" ):
                return visitor.visitFormalParameters(self)
            else:
                return visitor.visitChildren(self)




    def formalParameters(self):

        localctx = jParser.FormalParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_formalParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(jParser.T__19)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jParser.T__23) | (1 << jParser.T__24) | (1 << jParser.T__25) | (1 << jParser.ID))) != 0):
                self.state = 195
                self.formalParameter()
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==jParser.T__20:
                    self.state = 196
                    self.match(jParser.T__20)
                    self.state = 197
                    self.formalParameter()
                    self.state = 202
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 205
            self.match(jParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(jParser.TypContext,0)


        def ID(self):
            return self.getToken(jParser.ID, 0)

        def getRuleIndex(self):
            return jParser.RULE_formalParameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameter" ):
                return visitor.visitFormalParameter(self)
            else:
                return visitor.visitChildren(self)




    def formalParameter(self):

        localctx = jParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_formalParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.typ()
            self.state = 208
            self.match(jParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(jParser.ExpressionContext,0)


        def getRuleIndex(self):
            return jParser.RULE_parExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParExpression" ):
                return visitor.visitParExpression(self)
            else:
                return visitor.visitChildren(self)




    def parExpression(self):

        localctx = jParser.ParExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210
            self.match(jParser.T__19)
            self.state = 211
            self.expression()
            self.state = 212
            self.match(jParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LocalVariableDeclarationStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(jParser.TypContext,0)


        def variableDeclarators(self):
            return self.getTypedRuleContext(jParser.VariableDeclaratorsContext,0)


        def getRuleIndex(self):
            return jParser.RULE_localVariableDeclarationStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalVariableDeclarationStatement" ):
                return visitor.visitLocalVariableDeclarationStatement(self)
            else:
                return visitor.visitChildren(self)



